Started and Completed initial styling of entire app. Reedy to add final functional piece of userLoadout.

--- a/dev/styles/components/base.scss
+++ b/dev/styles/components/base.scss
@@ -31,10 +31,6 @@ h4 {
     padding: 0px;
 }
 
-img {
-    // width: 100%;
-}
-
 input {
     border: none;
     background: none;
@@ -45,10 +41,10 @@ fieldset {
     border: none;
 }
 
-// button {
-//     border: none;
-//     background: none;
-// }
+button {
+    border: none;
+    background: none;
+}
 
 nav {
     margin: 0px;
