--- a/dev/styles/components/footer.scss
+++ b/dev/styles/components/footer.scss
@@ -1,5 +1,18 @@
 footer {
-    background-color: yellow;
-    height: 100px;
-    margin-top: 100px;
+    background-image: url(../assets/footerHero.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 750px;
+    padding-top: 400px;
+    text-align: center;
+}
+
+footer h2 {
+    font-family: 'Medula One', serif;
+    @include remCalc(80);
+}
+
+footer h4 {
+    margin-top: 15px;
+    @include remCalc(16);
 }
