--- a/dev/styles/styles.scss
+++ b/dev/styles/styles.scss
@@ -1,14 +1,24 @@
-// @import "components/setup";
-// @import "components/base";
-// @import "components/header";
+@import "./components/setup";
+@import "./components/base";
+@import "./components/header";
+@import "./components/main";
+@import "./components/weapons";
+@import "./components/armors";
+@import "./components/food";
+@import "./components/footer";
 // ASK ABOUT THIS ON MONDAY. IMPORTING JUST CAUSES EVERYTHING TO COMPILE TWICE BECAUSE OF GULP, SO WHAT IS THE POINT OF A STYLE.SCSS FILE NOW?
 
+// Accent text color = #B99F65
+// Main text color = #FFF
+
 body {
-    background-color: crimson;
+    background-image: url('../assets/botwBackgroundPattern.jpg');
+    font-family: 'Libre Baskerville', serif;
+    color: #fff;
 }
 
 .wrapper {
-    max-width: 940px;
-    margin: 0 auto; 
-    background-color: blue;
+    max-width: 1080px;
+    margin: 0 auto;
 }
+
