--- a/dev/styles/components/header.scss
+++ b/dev/styles/components/header.scss
@@ -21,6 +21,7 @@ header h3 {
 header a {
     display: block;
     background-color:#B99F65;
+    color: white;
     margin: 0 auto;
     width: 130px;
     padding-top: 15px;
