--- a/dev/styles/styles.scss
+++ b/dev/styles/styles.scss
@@ -4,9 +4,8 @@
 @import "./components/main";
 @import "./components/weapons";
 @import "./components/armors";
-@import "./components/food";
+@import "./components/elixirs";
 @import "./components/footer";
-// ASK ABOUT THIS ON MONDAY. IMPORTING JUST CAUSES EVERYTHING TO COMPILE TWICE BECAUSE OF GULP, SO WHAT IS THE POINT OF A STYLE.SCSS FILE NOW?
 
 // Accent text color = #B99F65
 // Main text color = #FFF
