Refactored Code, Added Favicon, and updated database. Also made header and footer more responsive for larger screens.

--- a/dev/styles/components/_header.scss
+++ b/dev/styles/components/_header.scss
@@ -2,8 +2,11 @@ header {
     background-image: url(../assets/headerHero.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    padding-top: 80px;
-    padding-bottom: 55px;
+    height: 100vh;
+    padding-top: 15vh;
+    padding-bottom: 10vh;
+    // padding-top: 80px;
+    // padding-bottom: 55px;
     text-align: center;
 }
 
