--- a/dev/styles/components/_footer.scss
+++ b/dev/styles/components/_footer.scss
@@ -2,8 +2,8 @@ footer {
     background-image: url(../assets/footerHero.png);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 750px;
-    padding-top: 400px;
+    height: 100vh;
+    padding-top: 50vh;
     text-align: center;
 }
 
