--- a/dev/styles/components/_main.scss
+++ b/dev/styles/components/_main.scss
@@ -1,43 +1,46 @@
-main .wrapper{
-    display: flex;
-    justify-content: space-between;
+main {
     padding-top: 100px;
     padding-bottom: 100px;
-    text-align: center;
-}
-
-main button {
-    background-color: #B99F65;
-    padding: 10px 30px;
-    margin-bottom: 10px;
-    border-radius: 50px;
-    border: 2px solid transparent;
-    color: white;
-    transition: all 0.5s;
-    &:hover {
-        background-color: white;
-        border: 2px solid #B99F65;
-        color: #B99F65;
+    .loadout {
+        display: flex;
+        justify-content: space-between;
+        text-align: center;
     }
-}
-
-main a {
-    display: block;
-    background-color:#B99F65;
-    color: white;
-    margin: 0 auto;
-    margin-bottom: 50px;
-    width: 200px;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    border-radius: 50px;
-    text-align: center;
-    transition: all 0.5s;
-    @include remCalc(16);
-    &:hover {
-        background-color: #fff;
-        color: #B99F65;
+    button {
+        background-color: #B99F65;
+        padding: 12px 30px;
+        margin-bottom: 10px;
+        border-radius: 50px;
+        color: white;
+        transition: all 0.5s;
+        &:hover {
+            background-color: white;
+            color: #B99F65;
+        }
+    }    
+    a {
+        display: block;
+        background-color:#B99F65;
+        color: white;
+        margin: 0 auto;
+        margin-top: 50px;
+        width: 200px;
+        padding-top: 15px;
+        padding-bottom: 15px;
+        border-radius: 50px;
+        text-align: center;
+        transition: all 0.5s;
+        @include remCalc(16);
+        &:hover {
+            background-color: #fff;
+            color: #B99F65;
+        }    
     }
+}    
+
+.instructions__section {
+    text-align: center;
+    margin-bottom: 75px;
 }
 
 .weapons__section {
@@ -54,7 +57,7 @@ main a {
 
 .weapons__list {
     padding: 0 20px;
-    height: 600px;
+    height: 770px;
     overflow: scroll;
 }
 
@@ -66,6 +69,6 @@ main a {
 
 .elixir__list  {
     padding: 0 20px;
-    height: 600px;
+    height: 770px;
     overflow: scroll;
 }
