--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -191,8 +191,9 @@ header {
   background-image: url(../assets/headerHero.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-  padding-top: 80px;
-  padding-bottom: 55px;
+  height: 100vh;
+  padding-top: 15vh;
+  padding-bottom: 10vh;
   text-align: center; }
 
 header h1 {
@@ -221,42 +222,43 @@ header a {
     background-color: #fff;
     color: #B99F65; }
 
-main .wrapper {
-  display: flex;
-  justify-content: space-between;
+main {
   padding-top: 100px;
-  padding-bottom: 100px;
-  text-align: center; }
+  padding-bottom: 100px; }
+  main .loadout {
+    display: flex;
+    justify-content: space-between;
+    text-align: center; }
+  main button {
+    background-color: #B99F65;
+    padding: 12px 30px;
+    margin-bottom: 10px;
+    border-radius: 50px;
+    color: white;
+    transition: all 0.5s; }
+    main button:hover {
+      background-color: white;
+      color: #B99F65; }
+  main a {
+    display: block;
+    background-color: #B99F65;
+    color: white;
+    margin: 0 auto;
+    margin-top: 50px;
+    width: 200px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border-radius: 50px;
+    text-align: center;
+    transition: all 0.5s;
+    font-size: 1rem; }
+    main a:hover {
+      background-color: #fff;
+      color: #B99F65; }
 
-main button {
-  background-color: #B99F65;
-  padding: 10px 30px;
-  margin-bottom: 10px;
-  border-radius: 50px;
-  border: 2px solid transparent;
-  color: white;
-  transition: all 0.5s; }
-  main button:hover {
-    background-color: white;
-    border: 2px solid #B99F65;
-    color: #B99F65; }
-
-main a {
-  display: block;
-  background-color: #B99F65;
-  color: white;
-  margin: 0 auto;
-  margin-bottom: 50px;
-  width: 200px;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  border-radius: 50px;
+.instructions__section {
   text-align: center;
-  transition: all 0.5s;
-  font-size: 1rem; }
-  main a:hover {
-    background-color: #fff;
-    color: #B99F65; }
+  margin-bottom: 75px; }
 
 .weapons__section {
   width: 33.3333%; }
@@ -269,7 +271,7 @@ main a {
 
 .weapons__list {
   padding: 0 20px;
-  height: 600px;
+  height: 770px;
   overflow: scroll; }
 
 .armors__list {
@@ -279,7 +281,7 @@ main a {
 
 .elixir__list {
   padding: 0 20px;
-  height: 600px;
+  height: 770px;
   overflow: scroll; }
 
 .weapons:hover {
@@ -361,8 +363,8 @@ footer {
   background-image: url(../assets/footerHero.png);
   background-size: cover;
   background-repeat: no-repeat;
-  height: 750px;
-  padding-top: 400px;
+  height: 100vh;
+  padding-top: 50vh;
   text-align: center; }
 
 footer h2 {
