--- a/dev/styles/components/_footer.scss
+++ b/dev/styles/components/_footer.scss
@@ -2,6 +2,7 @@ footer {
     background-image: url(../assets/footerHero.png);
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
     height: 100vh;
     padding-top: 50vh;
     text-align: center;
