--- a/dev/styles/components/_main.scss
+++ b/dev/styles/components/_main.scss
@@ -57,18 +57,28 @@ main {
 
 .weapons__list {
     padding: 0 20px;
-    height: 770px;
+    height: 100vh;
     overflow: scroll;
 }
 
 .armors__list {
     padding: 0 20px;
-    height: 770px;
+    height: 100vh;
     overflow: scroll;
 }
 
 .elixir__list  {
     padding: 0 20px;
-    height: 770px;
+    height: 100vh;
     overflow: scroll;
+}
+
+@media (max-width: 767px) {
+    .loadout {
+        flex-wrap: wrap;
+    }
+    .weapons__section, .armors__section, .elixir__section {
+        width: 100%;
+        margin-top: 50px;
+    }
 }
