--- a/dev/styles/styles.scss
+++ b/dev/styles/styles.scss
@@ -18,6 +18,8 @@ body {
 
 .wrapper {
     max-width: 1080px;
+    width: 95%;
     margin: 0 auto;
 }
 
+// Need to max corrective media queryies or adjustments to images in order to make them responsive. 1st suggested media query is at 826px. But it will probably be easier to set all images to 100% then adjust their widths accordingly.
