--- a/dev/styles/components/_footer.scss
+++ b/dev/styles/components/_footer.scss
@@ -17,3 +17,9 @@ footer h4 {
     margin-top: 15px;
     @include remCalc(16);   
 }
+
+@media (max-width: 767px) {
+    footer h2 {
+        @include remCalc(50);
+    }
+}
