--- a/dev/styles/components/_header.scss
+++ b/dev/styles/components/_header.scss
@@ -3,11 +3,8 @@ header {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    // height: 100vh;
-    // padding-top: 15vh;
-    // padding-bottom: 10vh;
-    padding-top: 80px;
-    padding-bottom: 55px;
+    padding-top: 15vh;
+    padding-bottom: 10vh;
     text-align: center;
 }
 
@@ -15,6 +12,10 @@ header h1 {
     font-family: 'Medula One', cursive;
     letter-spacing: 10px;
     @include remCalc(84);
+}
+
+header img {
+    width: 48%;
 }
 
 header h3 {
@@ -41,10 +42,11 @@ header a {
     }
 }
 
-@media (min-width: 1081px) {
-    header {
-        height: 100vh;
-        padding-top: 15vh;
-        padding-bottom: 10vh;
+@media (max-width: 767px) {
+    header h1 {
+        @include remCalc(50);
+    }
+    header h3 {
+        @include remCalc(20);
     }
 }
